--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-router-native": "^6.19.0"
+    "react-router-native": "^6.19.0",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
