--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.5",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
