--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.72.6",
     "react-native-pdf-lib": "^1.0.0",
     "react-router-native": "^6.19.0",
-    "yet": "^0.1.0"
+    "yet": "^0.1.0",
+    "expo-print": "~12.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
