--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "expo": "~49.0.15",
+    "expo-print": "~12.4.2",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-mail": "^6.1.1",
     "react-native-pdf-lib": "^1.0.0",
     "react-router-native": "^6.19.0",
     "yet": "^0.1.0",
-    "expo-print": "~12.4.2"
+    "expo-mail-composer": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
